# AirwaySeg

./: .gitignore  CNN.ipynb  DatasetGenerator.py  README.md  Untitled.ipynb  basic_stdout.py  build_dataset.py  cnn_model.py  cube_queue.py  extract_rois.py  fake_model.py  fc_net.py  image_helper.py  make_dataset.py  net_calc.py  nn_model.py  roi_queue.py  running_stat.py  stat_helper.py  test_roi.py  test_train.py  voi.py  voi_queue.py
APPIL_DNN/: basic_stdout.py  process_runner.py
CPP/: BinaryImageProcessor.cpp  BinaryImageProcessor.h  CMakeLists.txt  CommandLineProcessor.h  DICOMProcessor.cpp  DICOMProcessor.cxx  FullImageProcessor.cpp  FullImageProcessor.h  ImageProcessor.cpp  ImageProcessor.cxx  ImageProcessor.h  ThreadedQueue.cpp  ThreadedQueue.h  cnpy.cxx
